--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 <!-- PWA -->
 <meta name="theme-color" content="#2563eb">
-<link rel="manifest" href="./manifest.webmanifest?v=2026-01-13-1">
+<link rel="manifest" href="./manifest.webmanifest?v=2026-01-14-1">
 
 <!-- iOS + legacy Android -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-title" content="Budget">
+<meta name="apple-mobile-web-app-title" content="Purrfect Budget">
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
 <!-- iOS home screen icons -->
