--- a/index.html
+++ b/index.html
@@ -78,12 +78,10 @@ body {
   flex-wrap: wrap;
 }
 
-h1 {
-  margin: 0;
-  font-size: 1.9rem;
-  font-weight: 900;
-  letter-spacing: -0.015em;
-  text-align: center;
+.header-label {
+  font-size: 0.95rem; /* match pill */
+  font-weight: 800;
+  color: var(--text-muted);
 }
 
 .card {
@@ -111,7 +109,7 @@ h1 {
 .summary-row span { font-weight: 900; }
 
 .period-end {
-  margin-top: 0.85rem;
+  margin: 0 0 0.85rem 0; /* moved to top */
   text-align: center;
   color: var(--text-muted);
   font-size: 0.92rem;
@@ -239,6 +237,7 @@ button:disabled {
   margin: 0 0 0.6rem 0;
   font-size: 1.2rem;
   font-weight: 900;
+  text-align: center;
 }
 
 .modal .muted {
@@ -246,18 +245,20 @@ button:disabled {
   font-size: 0.95rem;
   line-height: 1.35;
   margin: 0 0 0.9rem 0;
+  text-align: center;
 }
 
 .modal .row {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 0.65rem;
+  gap: 0.45rem;
   margin-bottom: 0.85rem;
 }
 
 .modal label {
-  font-weight: 800;
+  font-weight: 900;
   font-size: 0.95rem;
+  text-align: center; /* centered labels */
 }
 
 .modal input {
@@ -308,11 +309,13 @@ button:disabled {
 <body>
 <div class="container">
   <div class="header-row">
-    <h1>Budget Tracker is</h1>
+    <div class="header-label">Server Status:</div>
     <span class="pill" id="netStatusPill">Checking…</span>
   </div>
 
   <div class="card">
+    <div class="period-end" id="periodEndsText">Period ends: —</div>
+
     <div class="summary-row">
       <div>Food Remaining</div>
       <span id="foodRemaining">$0.00</span>
@@ -325,8 +328,6 @@ button:disabled {
       <div>Gas Remaining</div>
       <span id="gasRemaining">$0.00</span>
     </div>
-
-    <div class="period-end" id="periodEndsText">Period ends: —</div>
   </div>
 
   <div class="card expenses-card">
@@ -378,21 +379,21 @@ button:disabled {
   <div class="modal" role="dialog" aria-modal="true" aria-labelledby="settingsTitle">
     <h3 id="settingsTitle">Settings</h3>
     <p class="muted" id="settingsSubtitle">
-      Budget changes apply starting next period (Eastern Time) so they do not change the current period’s remaining amounts.
+      Changes take effect on: —
     </p>
 
     <div class="row">
-      <label for="setFood">Food budget (next period)</label>
+      <label for="setFood">Food</label>
       <input id="setFood" type="text" inputmode="decimal" autocomplete="off">
     </div>
 
     <div class="row">
-      <label for="setFun">Fun budget (next period)</label>
+      <label for="setFun">Fun</label>
       <input id="setFun" type="text" inputmode="decimal" autocomplete="off">
     </div>
 
     <div class="row">
-      <label for="setGas">Gas budget (next period)</label>
+      <label for="setGas">Gas</label>
       <input id="setGas" type="text" inputmode="decimal" autocomplete="off">
     </div>
 
@@ -415,19 +416,7 @@ const SW_VERSION = "2026-01-13-1";
 const DEFAULT_BUDGETS = { food: 500, fun: 300, gas: 200 };
 const PRUNE_DAYS = 60;
 
-const STANDARD_TZ = "America/New_York"; // Eastern Time standard
-
-/*
-  Semi-monthly budget periods in Eastern Time:
-  - Period 1: 1st–14th (ends at 12:00 AM ET on the 15th)
-  - Period 2: 15th–end of month (ends at 12:00 AM ET on the 1st of next month)
-
-  Implementation detail:
-  - We store occurred_at as an ISO timestamp (UTC is fine).
-  - We assign periods by converting occurred_at to Eastern calendar date parts
-    (year/month/day) via Intl.DateTimeFormat timeZone conversion.
-  - This ensures two devices in different time zones still agree on period.
-*/
+const STANDARD_TZ = "America/New_York";
 
 /* =========================================================
    ELEMENTS / STATE
@@ -549,7 +538,7 @@ function clampNonNegative(n) {
 }
 
 /* =========================================================
-   EASTERN TIME PERIOD LOGIC (date-parts based, DST-safe)
+   EASTERN TIME PERIOD LOGIC (fixed to avoid month drift)
    ========================================================= */
 
 const etPartsFormatter = new Intl.DateTimeFormat('en-US', {
@@ -559,7 +548,7 @@ const etPartsFormatter = new Intl.DateTimeFormat('en-US', {
   day: '2-digit'
 });
 
-const etLabelFormatter = new Intl.DateTimeFormat('en-US', {
+const etMonthYearFormatter = new Intl.DateTimeFormat('en-US', {
   timeZone: STANDARD_TZ,
   month: 'long',
   year: 'numeric'
@@ -573,7 +562,6 @@ const etMonthDayFormatter = new Intl.DateTimeFormat('en-US', {
 });
 
 function getEtYmd(dateObj) {
-  // Returns { y, m, d } in Eastern calendar terms
   const parts = etPartsFormatter.formatToParts(dateObj);
   const map = Object.fromEntries(parts.filter(p => p.type !== 'literal').map(p => [p.type, p.value]));
   return { y: Number(map.year), m: Number(map.month), d: Number(map.day) };
@@ -593,14 +581,13 @@ function currentPeriodInfoET(now = new Date()) {
   const half = (d <= 14) ? 1 : 2;
   const last = lastDayOfMonth(y, m);
 
-  const monthYear = etLabelFormatter.format(new Date(Date.UTC(y, m - 1, 1)));
+  // IMPORTANT: this formatter is already ET-based; do NOT pass a UTC-constructed date here
+  const monthYear = etMonthYearFormatter.format(now);
+
   const label = (half === 1)
     ? `${monthYear} (1–14, ET)`
     : `${monthYear} (15–${last}, ET)`;
 
-  // Period end at midnight ET:
-  // - For half 1: midnight ET on the 15th
-  // - For half 2: midnight ET on the 1st of next month
   let endY = y, endM = m, endD;
   if (half === 1) {
     endD = 15;
@@ -610,35 +597,40 @@ function currentPeriodInfoET(now = new Date()) {
     else { endM = m + 1; }
   }
 
-  return {
-    y, m, d, half, last,
-    key: `${y}-${pad2(m)}-${half}`,
-    label,
-    endY, endM, endD
-  };
+  return { y, m, d, half, last, key: `${y}-${pad2(m)}-${half}`, label, endY, endM, endD };
 }
 
 function nextPeriodInfoET(now = new Date()) {
   const cur = currentPeriodInfoET(now);
-  // Next period is simply the other half (or next month)
-  // We compute by creating a date near the start of next period in UTC,
-  // then converting to ET parts again.
-  //
-  // For half 1 -> next starts on 15th ET
-  // For half 2 -> next starts on 1st ET next month
-  const approxUtc = (cur.half === 1)
-    ? new Date(Date.UTC(cur.y, cur.m - 1, 15, 12, 0, 0)) // midday UTC near 15th
-    : new Date(Date.UTC(cur.endY, cur.endM - 1, 1, 12, 0, 0)); // midday UTC near next 1st
-
+  // Build the next period start date in ET terms, then anchor it by taking noon UTC of that calendar date.
+  // Noon UTC is safely away from midnight shifts when converting time zones.
+  let ny = cur.y, nm = cur.m, nd;
+  if (cur.half === 1) {
+    nd = 15;
+  } else {
+    nd = 1;
+    if (cur.m === 12) { nm = 1; ny = cur.y + 1; }
+    else { nm = cur.m + 1; }
+  }
+  const approxUtc = new Date(Date.UTC(ny, nm - 1, nd, 12, 0, 0));
   return currentPeriodInfoET(approxUtc);
 }
 
 function formatPeriodEndText(cur) {
-  // Display: "Period ends: Month D, YYYY at 12:00 AM ET"
-  // We create a UTC date near the ET end date, then format in ET.
   const approxUtc = new Date(Date.UTC(cur.endY, cur.endM - 1, cur.endD, 12, 0, 0));
   const dateLabel = etMonthDayFormatter.format(approxUtc);
   return `Period ends: ${dateLabel} at 12:00 AM ET`;
+}
+
+function formatEffectiveDateOnly(curNext) {
+  // We only show the date that changes take effect (ET).
+  // Effective at 12:00 AM ET on:
+  const approxUtc = new Date(Date.UTC(curNext.y, curNext.m - 1, (curNext.half === 1 ? 1 : 15), 12, 0, 0));
+  // BUT the "next period" always starts either on the 15th or the 1st. We can derive it:
+  // If next.half=2 -> starts on 15th, else starts on 1st.
+  const startDay = (curNext.half === 1) ? 1 : 15;
+  const approxStartUtc = new Date(Date.UTC(curNext.y, curNext.m - 1, startDay, 12, 0, 0));
+  return etMonthDayFormatter.format(approxStartUtc);
 }
 
 /* =========================================================
@@ -818,7 +810,7 @@ async function pruneLocalData(days) {
 }
 
 /* =========================================================
-   BUDGETS (locked per Eastern semi-monthly period)
+   BUDGETS (locked per ET semi-monthly period)
    ========================================================= */
 
 async function getCurrentPeriodBudgetsCents() {
@@ -892,7 +884,7 @@ function setMode(mode) {
 }
 
 /* =========================================================
-   SUMMARY + PERIOD-TO-DATE TOTALS (Eastern semi-monthly)
+   SUMMARY + PERIOD-TO-DATE TOTALS (ET)
    ========================================================= */
 
 function computePeriodToDateSpentCents(ledgerItems) {
@@ -903,7 +895,6 @@ function computePeriodToDateSpentCents(ledgerItems) {
     const t = Date.parse(e?.occurred_at || '');
     if (!Number.isFinite(t)) continue;
 
-    // Determine ET period key for this entry from its timestamp
     const ymd = getEtYmd(new Date(t));
     const entryKey = periodKeyFromYmd(ymd.y, ymd.m, ymd.d);
 
@@ -925,12 +916,12 @@ function computeRemainingForPeriod(budgetsCents, spentCents) {
 }
 
 function renderSummary(remainingCents) {
+  const cur = currentPeriodInfoET(new Date());
+  periodEndsText.textContent = formatPeriodEndText(cur);
+
   foodRemainingEl.textContent = currency.format(dollarsFromCents(remainingCents.food));
   funRemainingEl.textContent  = currency.format(dollarsFromCents(remainingCents.fun));
   gasRemainingEl.textContent  = currency.format(dollarsFromCents(remainingCents.gas));
-
-  const cur = currentPeriodInfoET(new Date());
-  periodEndsText.textContent = formatPeriodEndText(cur);
 }
 
 function renderPeriodToDate(spentCents) {
@@ -943,15 +934,11 @@ function renderPeriodToDate(spentCents) {
 
 async function loadSummary() {
   setNetStatus();
-
   await rollBudgetPeriodIfNeeded();
 
   let ledger = [];
-  try {
-    ledger = await getAllLedger();
-  } catch (e) {
-    console.error(e);
-  }
+  try { ledger = await getAllLedger(); }
+  catch (e) { console.error(e); }
 
   const budgets = await getCurrentPeriodBudgetsCents();
   const spentCents = computePeriodToDateSpentCents(ledger);
@@ -989,12 +976,10 @@ function enqueueOfflineBatch(batch) {
 }
 
 /* =========================================================
-   SUBMIT HANDLING (offline-first)
+   SUBMIT HANDLING
    ========================================================= */
 
 async function submitExpenses(foodDollars, funDollars, gasDollars) {
-  // We still store an absolute timestamp; Eastern is the standard for period assignment,
-  // not for how timestamps are persisted.
   const occurred_at = nowIso();
   const created_by = "pwa";
 
@@ -1117,8 +1102,15 @@ async function syncNow() {
 }
 
 /* =========================================================
-   SETTINGS MODAL (applies NEXT Eastern semi-monthly period)
+   SETTINGS MODAL
+   - Show only effective date (ET) for next period start
+   - Center labels; no "(next period)" text
+   - Prepend $ to values shown in inputs
    ========================================================= */
+
+function moneyStringFromCents(cents) {
+  return `$${dollarsFromCents(cents).toFixed(2)}`;
+}
 
 function openSettings() {
   settingsBackdrop.style.display = 'flex';
@@ -1131,16 +1123,16 @@ function openSettings() {
     getMeta('next_budget_gas_cents'),
   ]).then(([cur, nFood, nFun, nGas]) => {
     const next = nextPeriodInfoET(new Date());
-    settingsSubtitle.textContent =
-      `Budget changes apply starting the next period (${next.label}) so they do not change the current period’s remaining amounts.`;
+    const effectiveDate = formatEffectiveDateOnly(next);
+    settingsSubtitle.textContent = `Changes take effect on: ${effectiveDate} (12:00 AM ET)`;
 
     const foodC = Number(nFood ?? cur.food);
     const funC  = Number(nFun  ?? cur.fun);
     const gasC  = Number(nGas  ?? cur.gas);
 
-    setFood.value = String(dollarsFromCents(foodC));
-    setFun.value  = String(dollarsFromCents(funC));
-    setGas.value  = String(dollarsFromCents(gasC));
+    setFood.value = moneyStringFromCents(foodC);
+    setFun.value  = moneyStringFromCents(funC);
+    setGas.value  = moneyStringFromCents(gasC);
   });
 }
 
@@ -1164,7 +1156,7 @@ async function saveSettings() {
   await setMeta('next_budget_gas_cents',  centsFromDollars(g));
 
   closeSettings();
-  showSuccess('Saved (next period)');
+  showSuccess('Saved (effective next period)');
 }
 
 /* =========================================================
@@ -1180,7 +1172,6 @@ modeExpenseBtn.addEventListener('click', () => setMode("expense"));
 modeRefundBtn.addEventListener('click', () => setMode("refund"));
 
 function normalizeFieldTextInput(el) {
-  // prevent minus sign entry; refunds handled by toggle
   el.value = String(el.value).replace(/-/g, '');
 }
 foodInput.addEventListener('input', () => { normalizeFieldTextInput(foodInput); updateButtonState(); });
