--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Budget Tracker</title>
+<title>Purrfect Budget</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
@@ -13,7 +13,7 @@
 <!-- iOS + legacy Android -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-title" content="Budget">
+<meta name="apple-mobile-web-app-title" content="Purrfect Budget">
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
 <!-- iOS home screen icons -->
