--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <!-- PWA -->
 <meta name="theme-color" content="#2563eb">
-<link rel="manifest" href="./manifest.webmanifest?v=2026-01-13-1">
+<link rel="manifest" href="./manifest.webmanifest">
 
 <!-- iOS + legacy Android -->
 <meta name="apple-mobile-web-app-capable" content="yes">
